# cert-control-plane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  certcp.db  docker-compose.override.yml  docker-compose.yml  pyproject.toml  request.md  start.sh  startup.ps1
.github/workflows/: ci.yml  release.yml  security.yml
agent/: __main__.py  agent.env.example  client.py  config.py  crypto.py  deployer.py  pyproject.toml  runner.py
agent-go/: Dockerfile  build.sh  go.mod  go.sum
agent-rust/: Cargo.toml  build-darwin.sh  build-linux.sh
agent-rust/src/client/: mod.rs
agent-rust/src/config/: mod.rs
agent-rust/src/crypto/: mod.rs
agent-rust/src/runner/: mod.rs
agent/scripts/: install.ps1  install.sh
alembic/: env.py
alembic/versions/: 001_initial.py  002_serial_hex_compat.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: agent.py  control.py  dashboard.py
app/core/: audit.py  crypto.py  security.py  (+1 more)
docs/: FINAL-REPORT.md  README.md  WORK-SUMMARY.md  agent-comparison.md  alerting.md  aliyun-cert-integration-proposal.md  completion-plan.md  deployment-compose.md  deployment-production.md  execution-checklist.md  final-summary.md  fix-plan.md  m4-execution-plan.md  next-steps.md  pre-production-checklist.md  project-status-report.md  quick-verification.md  release-template.md  security-audit-checklist.md  sprint3-summary.md  test-environment-deployment.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
nginx/: nginx.conf
scripts/: init_ca.py  minikube-create-sa-kubeconfig.sh  minikube-deploy.sh  minikube-k8s-secret-e2e.sh  minikube-k8s-secret-real-simulation.sh  run-perf-test.sh  smoke-test.sh
server/: .dockerignore  Dockerfile  Dockerfile.frontend  pyproject.toml
specs/: 前端重构技术方案.md  投产评估报告.md  真实场景测试报告-2026-05-11.md  自测报告.md
tests/: conftest.py  test_agent_api.py  test_agent_auth.py  test_agent_deploy.py  test_control_api.py  test_dashboard.py  test_distribution_integration.py  test_healthz.py  test_installer.py  test_model_enums.py  test_rollout.py  test_serial_hex.py
(+157 files in other folders)
