[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cert-agent"
version = "0.1.0"
description = "Certificate lifecycle agent – runs on nginx nodes, communicates with cert-control-plane"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
